Added main pages

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,5 +16,26 @@
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
+
+<!--<script>-->
+    <!--fetch("/login?login=me&password=1a1dc91c907325c69271ddf0c944bc72",-->
+        <!--{-->
+            <!--method: "GET",-->
+            <!--headers: {-->
+                <!--'Content-Type': 'application/json'-->
+            <!--}-->
+        <!--}-->
+
+    <!--).then(function(res){-->
+        <!--console.log(res.json())-->
+
+
+    <!--}).catch(function () {-->
+        <!--console.log('Error occurred, please try again')-->
+    <!--})-->
+<!--</script>-->
+
 </body>
+
+
 </html>
