--- a/src/main/resources/templates/assets/style/goods.css
+++ b/src/main/resources/templates/assets/style/goods.css
@@ -1,7 +1,7 @@
 
 .goods_items {
     flex: 1 1 0;
-    padding: 30px 0;
+    padding: 20px 0 30px;
 }
 
 .goods_items-wrapper {
@@ -135,7 +135,14 @@
     margin: 0 20px;
 }
 
-input[type="password"] {
+input[type="text"] {
+    margin-left:5px;
+    border-radius: 3px;
+    border: 1px solid #d0eaff;
+    padding: 5px;
+}
+
+input[type="number"] {
     margin-left:5px;
     border-radius: 3px;
     border: 1px solid #d0eaff;
