--- a/src/main/resources/templates/assets/style/modal.css
+++ b/src/main/resources/templates/assets/style/modal.css
@@ -83,6 +83,9 @@
 .modal-footer{
     padding:10px ;
     border-top:1px solid rgba(0, 0, 0, 0.04);
+    display: flex;
+    justify-content: flex-end;
+
 }
 
 
